--- a/app/config/locales/en.yml
+++ b/app/config/locales/en.yml
@@ -20,4 +20,5 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  errors:
+    not_logged_in: 'Invalid API key or no API key specified.'
