--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,6 +25,7 @@ en:
     not_logged_in: 'Invalid API key or no API key specified.'
     invalid_ssh_key: 'No such SSH key found.'
     json_body_invalid: 'Request body does not contain valid JSON.'
+    not_found: 'Not found'
 
   login:
     incorrect_username_email_or_password: "Incorrect username, email or password"
